Fri May  7 2004  Joe Allen <jhallen@world.std.com>
	* main.c, menu.c, pw.c, qw.c, rc.c, tab.c :

	joe a b c, now windows are in order a, b, c.

	TAB completion now works on last path in prompt window:
	for example '!ls foo', tab will complete the foo.

	Added menu_explorer option.  When set: menu stays up when
	a directory is seleted.  When clear: directory is added
	to path and menu is closed.

	Menus are now 40% of window size (or smaller if they are
	not filled).

	Cursor is now position after selected menu entry.

Thu May  6 2004  Joe Allen <jhallen@world.std.com>
	* umenu.c :

	TAB key now cycles through menu entries.  This is useful
	for tab completion: just keep hitting tab until you see the
	file you want, then hit enter.

	TAB completion is more "bash"-like: if you complete a directory
	name a menu does not appear, the directory just gets added to the
	prompt.

Thu May  6 2004  Joe Allen <jhallen@world.std.com>
	* ublock.c :

	Added "select" function for Ctrl-arrow selecting.
	Ctrl-space drops anchor and sets marking mode.

Thu May  6 2004  Joe Allen <jhallen@world.std.com>
	* uerror.c :

	Improve error parser: require ':' on error lines.
	Make macro 'compile' for error parsing.
	'compile' macro always uses same buffer.
	^X ` in jmacs goes to next error.

Thu May  6 2004  Joe Allen <jhallen@world.std.com>
	* uedit.c :

	Smart tab looks back 10 lines to determine indentation.

Wed May  5 2004  Joe Allen <jhallen@world.std.com>
	* charmap.c :

	Now parses charmap files.

Wed May  5 2004  Joe Allen <jhallen@world.std.com>
 	* bw.c charmap.c main.c qw.c qw.h regex.c regex.h 
 	syntax.c types.h uisrch.c usearch.c utf8.c utf8.h:

	Regex search now works properly with UTF-8 chars.
	Incremental search now works with UTF-8.

Wed May  5 2004  Joe Allen <jhallen@world.std.com>
	* utils.c, c.jsf.in:

	Fix c++ keywords.
	Fix parse_ident, which was breaking fortran highlighter.

Tue May  4 2004  Joe Allen <jhallen@world.std.com>
	* rc.c, selinux.c, syntax.c, ufile.c:
