@@ -61,6 +61,8 @@
 -menu_explorer Stay in menu system when a directory is selected (otherwise
                 directory is added to path and menu is closed).
 
+ -icase         Search is case insensitive by default.
+
  Status line definition strings.  -lmsg defines the left-justified string and
  -rmsg defines the right-justified string.  The first character of -rmsg is
  the background fill character.  The following escape sequences can be used
